--- a/session2/style.css
+++ b/session2/style.css
@@ -1,8 +1,13 @@
-.container, .header {
+#container, #header {
     display: flex;
     align-items: center;
     justify-content: center;
     text-align: center;
+}
+
+body {
+    margin: 0;
+    background-color: #D5C9DD;
 }
 
 .list {
@@ -24,8 +29,8 @@
 .intext {
     text-align: center;
     width: 100%;
-    border-bottom: 2px solid #d3d3d3;
     padding-bottom: 50px;
+    font-weight:100px;
 }
 
 /* 교육 및 활동 섹션 컨테이너 */
@@ -44,4 +49,28 @@
     margin: 0 10px;
     white-space: pre-wrap;
     line-height: 200%;
+}
+
+.one > p {
+    font-weight:bold
+}
+
+.fav {
+    align-items: center;
+    text-align: center;
+    margin-bottom: 10;
+}
+
+.music {
+    width: 300px;
+    height: 300px;
+    margin-left: 3%;
+}
+
+.lan {
+    text-align: center;
+    width: 100%;
+    border-bottom: 2px solid #C7B9C5;
+    padding-bottom: 50px;
+    font-weight:100px;
 }
