--- a/session2/CSS/style.css
+++ b/session2/CSS/style.css
@@ -1,27 +1,51 @@
+a:link,
+a:visited {
+  color: rgb(239, 234, 165);
+  font-weight: bold;
+  font-size: 20px;
+}
+
+a:hover {
+  color: coral;
+}
+
+a {
+  text-decoration: none;
+}
+
+/*왼쪽*/
+
 .aside {
   float: left;
-  clear: left;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  width: 200px;
-  height: 400px;
+  width: 30%;
+  height: 100vh;
   background-color: rgb(71, 106, 65);
 }
 
-#name1 {
-  font-weight: 800;
-  padding-top: 50px;
-  padding-bottom: 0;
-  margin-bottom: 0;
-  color: aliceblue;
+.profile {
+  text-align: center;
+  margin-top: 10vh;
 }
 
-#name2 {
-  font-weight: 800;
+#minju {
+  padding-top: 30px;
+  padding-bottom: 0;
+  margin-bottom: 0;
+}
+
+#park {
   padding-top: 0;
   margin-top: 0;
+  margin-bottom: 10px;
+}
+
+#park,
+#minju {
   color: aliceblue;
+  font-size: 35px;
+  font-weight: 800;
 }
 
 #manggom {
@@ -29,38 +53,59 @@
   border: 2px solid rgb(233, 210, 0);
 }
 
+/*nav*/
+
+.sns_email {
+  display: flex;
+  flex-direction: column;
+  margin-top: 30px;
+}
+
+.sns_email a:last-child {
+  margin-top: 10px;
+}
+
+/*오른쪽*/
 .content {
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  height: 400px;
+  height: 100vh;
   background-color: rgb(250, 244, 235);
-  border-left: 30px;
   padding-left: 50px;
   padding-right: 50px;
 }
 
-.subtitle {
+.content_title {
   margin-bottom: 10px;
+  font-size: 30px;
+  padding-bottom: 20px;
+  padding-left: 10px;
+  border-bottom: 4px solid black;
 }
 
-#a {
-  font-size: 12px;
-}
-
-#b {
-  font-size: 12px;
-}
-
-#c {
-  font-size: 12px;
-}
-
-.d {
-  font-size: 12px;
+.content_text {
+  font-size: 20px;
+  margin: 10px 0;
+  margin-left: 20px;
 }
 
 .love {
   display: flex;
-  flex-direction: row;
+  justify-content: space-around;
+  flex-wrap: wrap;
+}
+
+.love div {
+  display: flex;
+  border: 2px solid gray;
+  align-items: center;
+  justify-content: center;
+  border-radius: 10px;
+  flex: 30%;
+  margin: 10px 20px 0 0;
+}
+
+.love div p {
+  font-size: 20px;
+  margin-left: 1vw;
 }
