--- a/session2/css/style.css
+++ b/session2/css/style.css
@@ -4,6 +4,7 @@ body {
   min-height: 100vh;
   margin: 0;
   background-color: #ffffff;
+  font-family: "SF Pro", sans-serif;
 }
 
 .header {
@@ -17,7 +18,6 @@ body {
 .lionlogo {
   display: flex;
   align-items: center;
-  font-family: "SF Pro", sans-serif;
   font-size: 24px;
   font-weight: bold;
   margin: 18px 0px;
@@ -50,16 +50,17 @@ body {
   margin: 30px 80px 20px 40px;
 }
 
-.info {
-  flex-direction: row;
-  font-weight: bold;
-  font-family: "SF Pro", sans-serif;
+#sec1 > div {
   font-size: 40px;
   color: rgb(64, 45, 22);
 }
 
+.info {
+  flex-direction: row;
+  font-weight: bold;
+}
+
 .info > div {
-  font-family: "SF Pro", sans-serif;
   font-size: 15px;
   padding: 10px 0px;
 }
@@ -69,9 +70,6 @@ body {
   flex-direction: column;
   align-items: center;
   font-weight: bold;
-  font-family: "SF Pro", sans-serif;
-  font-size: 40px;
-  color: rgb(64, 45, 22);
   padding: 50px 20px;
 }
 
@@ -100,9 +98,6 @@ body {
   flex-direction: column;
   align-items: center;
   font-weight: bold;
-  font-family: "SF Pro", sans-serif;
-  font-size: 40px;
-  color: rgb(64, 45, 22);
   padding: 30px 20px;
   margin-bottom: 20px;
 }
@@ -112,7 +107,6 @@ body {
 }
 
 .list > div {
-  font-family: "SF Pro", sans-serif;
   font-weight: 500;
   font-size: 17px;
   color: rgb(64, 45, 22);
@@ -130,6 +124,5 @@ body {
   color: #ffffff;
   text-align: center;
   padding: 20px 0px;
-  font-family: "SF Pro", sans-serif;
   font-size: 15px;
 }
