--- a/session2_01/css/2style.css
+++ b/session2_01/css/2style.css
@@ -13,7 +13,7 @@ div {
 
 h3 {
   font-family: "IM_Hyemin-Bold";
-  color: blue;
+  color: lightskyblue;
 }
 
 h2,
@@ -22,6 +22,20 @@ li,
 p {
   font-family: "IM_Hyemin-Bold";
   font-style: normal;
+}
+
+.background {
+  background-attachment: fixed;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 900px;
+  height: 600px;
+  background-image: url("./img/background.png");
+  background-size: cover;
+  border-radius: 5px;
+  box-shadow: 0px 0px 25px lightgray;
 }
 
 .aboutme {
@@ -34,26 +48,10 @@ p {
   border-radius: 70%;
 }
 
-.folder {
-  position: fixed;
-  height: 100px;
-}
-
-.name {
-  position: fixed;
-  top: 103px;
-  left: 445px;
-  font-size: 13px;
-}
-
-.foldername {
-  position: fixed;
-  font-size: 16px;
-}
-
-.background {
+.intro {
+  background-attachment: fixed;
   position: absolute;
-  top: 50%;
+  top: 40%;
   left: 50%;
   transform: translate(-50%, -50%);
   width: 900px;
@@ -61,5 +59,4 @@ p {
   background-image: url("./img/background.png");
   background-size: cover;
   border-radius: 5px;
-  box-shadow: 0px 0px 25px lightgray;
 }
