--- a/everytime/css/style.css
+++ b/everytime/css/style.css
@@ -270,13 +270,13 @@ nav ul li:hover {
   margin-left: 25px;
   flex-direction: column;
   align-items: flex-start;
-  background-color: #f8f8f8;
 }
 
 .aside > div {
   width: 325px;
   margin-top: 5px;
   border: 1px solid #d6d6d6;
+  background-color: #f8f8f8;
 }
 
 .popular > div {
@@ -325,6 +325,13 @@ nav ul li:hover {
   border-bottom: 1px solid #d6d6d6;
 }
 
-.contents {
+.hot .contents {
   font-size: 13px;
+  display: flex;
+  justify-content: space-between;
+}
+
+.time {
+  font-size: 11px;
+  color: #b9b9b9;
 }
