--- a/session2/css/style.css
+++ b/session2/css/style.css
@@ -13,21 +13,41 @@ section {
   display: flex;
   flex-direction: row;
   justify-content: space-evenly;
+
+  height: 120px;
 }
 
-#sec1 {
+.sec1 {
   display: flex;
   flex-direction: column;
-  justify-content: space-around;
+  gap: 10px;
 }
 
-#sec2 {
+.sec2 {
   display: flex;
   flex-direction: column;
-  justify-content: space-around;
+  gap: 10px;
+}
+
+.act_year {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
 }
 
 .edu {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+
+.edu1 {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+}
+
+.edu2 {
   display: flex;
   flex-direction: row;
   justify-content: space-around;
@@ -71,7 +91,27 @@ footer {
   left: 50px;
 }
 
-.cate {
+.cate_act {
   font-weight: 700;
   background-color: blanchedalmond;
+  position: relative;
+  top: 1px;
+}
+
+.cate_edu {
+  font-weight: 700;
+  background-color: blanchedalmond;
+}
+
+.cate_ski {
+  font-weight: 700;
+  background-color: blanchedalmond;
+}
+
+hr {
+  width: 1000px;
+}
+
+pre {
+  font-size: 15px;
 }
