--- a/everytime/css/main.css
+++ b/everytime/css/main.css
@@ -1,3 +1,6 @@
+body {
+  margin: 0;
+}
 /* 헤더 css 코드 */
 header {
   border-color: gray;
@@ -30,7 +33,7 @@ header {
 }
 
 .everytime {
-  font-size: 13px;
+  font-size: 12px;
   font-weight: 600;
   color: red;
 }
@@ -63,6 +66,8 @@ li:hover {
   border: solid 1px rgb(205, 205, 205);
   border-radius: 25%;
   padding: 6px;
+
+  margin-left: 3px;
 }
 
 .boardcate {
@@ -78,7 +83,9 @@ li:hover {
 
   border-bottom: solid 1px rgb(213, 213, 213);
 }
-
+nav {
+  margin-bottom: 10px;
+}
 .b {
   display: flex;
   flex-direction: row;
@@ -260,6 +267,11 @@ section {
   flex-direction: column;
 }
 
+.prevsc {
+  margin-top: 10px;
+  margin-right: 10px;
+}
+
 .lettitle {
   font-size: 17px;
   font-weight: bold;
@@ -288,7 +300,7 @@ section {
   font-size: 12px;
 
   margin-left: 5px;
-  margin-right: 5px;
+  margin-right: 9px;
 }
 
 .comimg {
@@ -299,6 +311,31 @@ section {
 .comment {
   color: rgb(10, 205, 205);
   font-size: 12px;
+  margin-top: 1px;
+}
+
+.downfunc {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+
+  margin-top: 5px;
+  margin-bottom: 30px;
+}
+
+.search_func {
+  border: solid 1px;
+  padding-top: 6px;
+}
+
+.next {
+  width: 50px;
+  color: red;
+
+  /* padding: 5px; */
+  padding: 8px 5px;
+  border: solid 1px red;
+  border-radius: 5px;
 }
 
 /* aside */
@@ -345,6 +382,7 @@ aside {
   color: rgb(90, 90, 90);
 
   margin-right: 5px;
+  margin-top: 1px;
 }
 
 .asicate2 {
@@ -397,8 +435,33 @@ aside {
   justify-content: center;
 }
 
-.interest {
+.infointerest {
   display: flex;
   flex-direction: row;
   justify-content: start;
+}
+
+.interest {
+  display: flex;
+  flex-direction: row;
+
+  margin-top: 2px;
+}
+
+/* footer */
+.extrainfo {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+
+  color: gray;
+  font-size: 12px;
+
+  gap: 5px;
+
+  margin-bottom: 12px;
+}
+
+.boldlet {
+  font-weight: 700;
 }
