--- a/ds_library/css/style.css
+++ b/ds_library/css/style.css
@@ -1,3 +1,8 @@
+/* 사진이 꽉 차도록 */
+body {
+  margin: 0;
+}
+
 .navbar ul {
   list-style: none;
   display: flex;
@@ -17,15 +22,16 @@
   height: 100px;
 }
 
+/* 사진 수정 */
 .section1_div {
-  height: 275px;
   overflow: hidden;
+  width: 100%;
+  object-fit: cover;
 }
 
 .section1_div img {
   width: 100%;
-  object-fit: cover;
-  margin-top: -500px;
+  margin-top: -30%;
 }
 
 .section2_img {
@@ -44,6 +50,7 @@
   flex-direction: row;
   justify-content: center;
   background-color: #f4f3f0;
+  margin-top: -4px;
 }
 
 #notice {
@@ -61,8 +68,7 @@
 }
 
 #bold_p {
-  font-weight: 600;
-  font-size: 27px;
+  font-size: 22.4px;
 }
 
 #bold_p2 {
@@ -89,6 +95,7 @@
   display: flex;
   flex-direction: row;
   align-items: center;
+  border-bottom: 1px solid black;
 }
 
 .section3_div {
@@ -97,21 +104,25 @@
 }
 
 .date {
+  margin-left: 30px;
   font-size: 16px;
   color: #b5bbce;
 }
 
+/* hr대신 border-bottom으로 수정함 */
 .section3_2 {
-  margin-left: 30px;
+  padding: 10px;
+  border-bottom: 1px solid #a0a0a0;
 }
 
-.section3_hr {
-  color: #a0a0a0;
+.section3_2 span {
+  margin-left: 20px;
 }
 
 .section3_4 {
   display: flex;
   flex-direction: row;
+  justify-content: center;
   margin-top: 50px;
 }
 
