--- a/ds_library/css/style.css
+++ b/ds_library/css/style.css
@@ -7,6 +7,7 @@ body {
 .header {
   margin: 20px 150px;
   display: flex;
+  justify-content: center;
 }
 
 #header-menu {
@@ -51,7 +52,7 @@ body {
 /*content*/
 .content {
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
 }
 
 .title-container {
@@ -127,7 +128,11 @@ body {
 }
 
 .right-content img {
-  width: 90%;
-  height: auto;
+  width: 550px;
   margin-top: 60px;
+  margin-left: -70px;
+}
+
+.left-content {
+  margin-right: -70px;
 }
