--- a/everytime/css/main.css
+++ b/everytime/css/main.css
@@ -1,9 +1,7 @@
 @charset "utf-8";
 
-hr {
-  border: 0;
-  height: 1px;
-  background: rgb(230, 227, 227);
+body {
+  margin: 0;
 }
 
 .line {
@@ -43,6 +41,7 @@ hr {
 
 .logo_img {
   height: 65%;
+  margin-top: 12px;
 }
 
 .title {
@@ -73,6 +72,7 @@ hr {
   width: 40px;
   height: 40px;
   padding: 7px;
+  margin-top: 12px;
 }
 
 .category {
@@ -157,16 +157,19 @@ hr {
   width: 760px;
   padding-left: 15px;
   background-color: rgb(250, 250, 250);
+  display: flex;
 }
 
 .write p {
   color: rgb(207, 207, 207);
+  width: 150px;
+  margin-right: 150px;
 }
 
 .posting {
   border: 1.5px solid rgb(221, 221, 221);
   margin-top: 0px;
-  margin-bottom: 0px;
+  margin-bottom: -1px;
   width: 760px;
   height: 100px;
   padding-left: 15px;
@@ -212,6 +215,7 @@ hr {
 .posting_hot {
   border: 1px solid rgb(221, 221, 221);
   background-color: rgb(249, 249, 249);
+  height: 160px;
 }
 
 .title_2,
@@ -248,4 +252,34 @@ hr {
   display: flex;
   justify-content: space-between;
   height: 25px;
+  padding-bottom: 14.5px;
+  border-bottom: 1px solid rgb(230, 227, 227);
+}
+
+hr {
+  border: 0;
+  height: 1px;
+  background: rgb(230, 227, 227);
+}
+
+.pencil {
+  width: 40px;
+  height: 40px;
+  margin-left: 420px;
+  margin-top: 3px;
+}
+
+.footer {
+  list-style: none;
+  display: flex;
+  width: 100%;
+  justify-content: center;
+}
+
+.footer > li {
+  margin-left: 5px;
+  margin-right: 5px;
+  font-size: 13px;
+  color: #a6a6a6;
+  text-align: center;
 }
