--- a/ds_library/css/style.css
+++ b/ds_library/css/style.css
@@ -24,7 +24,7 @@ body {
 /*main*/
 .main {
   background-color: rgba(222, 211, 188, 0.261);
-  border: 1px solid rgb(190, 190, 190);
+  border-bottom: 1px solid rgb(190, 190, 190);
 }
 
 .main-menu {
@@ -32,6 +32,11 @@ body {
   justify-content: space-around;
   margin: 0px 120px;
   padding: 25px;
+}
+
+.main-img img {
+  width: 100%; /* 이미지 너비를 부모 요소의 100%로 설정 */
+  object-fit: cover; /* 컨테이너를 채우도록 이미지를 조정하되, 필요에 따라 이미지를 자를 수 있음 */
 }
 
 .item {
@@ -57,7 +62,7 @@ body {
 
 .title-container {
   display: flex;
-  margin: 60px 0px 10px 180px;
+  margin: 60px 0px 10px 0px;
 }
 
 .title-container .big-text {
@@ -94,7 +99,6 @@ body {
 .box-container {
   display: flex;
   flex-direction: column;
-  margin: 0px 180px 0px 180px;
 }
 
 .image-container {
@@ -128,11 +132,10 @@ body {
 }
 
 .right-content img {
+  margin: 60px auto 0;
   width: 550px;
-  margin-top: 60px;
-  margin-left: -70px;
 }
 
 .left-content {
-  margin-right: -70px;
+  margin-right: 40px;
 }
