--- a/ds_library/css/style.css
+++ b/ds_library/css/style.css
@@ -13,7 +13,7 @@ body {
 .container > img {
   display: table-cell;
   float: left;
-  margin: 0;
+  margin-right: 40px;
   padding: 0%;
   width: 260px;
   height: 59px;
@@ -21,21 +21,25 @@ body {
   line-height: 100%;
 }
 
+/*1. ruby-text 대신 flex로 변경*/
 .container > .ulClass {
-  display: ruby-text;
+  display: flex;
   box-sizing: border-box;
   font-weight: 600;
   text-align: center;
   padding-inline-start: 0px;
 }
 
+/* 2. 헤더 글자 간격 조정 및 3. list-style-type:none 이용
+display : inline-block 없애고, 차라리 list-style none으로 주기*/
 .container > .ulClass > .liClass {
   position: relative;
-  width: 12%;
+  width: auto;
   height: 80px;
   padding: 0;
   line-height: 70px;
-  display: inline-block;
+  list-style: none;
+  margin: 0px 40px 0px 0px;
 }
 
 .mainImg {
