--- a/ds_library/css/style.css
+++ b/ds_library/css/style.css
@@ -1,5 +1,6 @@
 .dslogo {
   margin-left: 80px;
+  margin-top: 12px;
 }
 
 .banner {
@@ -7,13 +8,19 @@
   font-weight: bold;
   display: flex;
   margin-top: 30px;
-  margin-left: 150px;
+  margin-left: 130px;
+}
+
+.bannerword {
+  margin-left: 15px;
+  margin-right: 15px;
 }
 
 .top {
   display: flex;
   flex-direction: row;
   margin-top: 15px;
+  justify-content: center;
 }
 
 .content {
@@ -33,10 +40,12 @@
 .midset {
   flex-direction: column;
   margin-left: 50px;
+  margin-top: 25px;
 }
 
 .midsetex {
   flex-direction: column;
+  margin-top: 25px;
 }
 
 .middlebarall {
@@ -44,6 +53,8 @@
   justify-content: center;
   flex-direction: row;
   background-color: rgb(245, 245, 245);
+  height: 180px;
+  border-bottom: solid 1px color rgba(171, 164, 164, 0.705);
 }
 
 .leftbottom {
@@ -51,7 +62,7 @@
   height: 500px;
   border: 2px;
   color: black;
-  margin-left: 200px;
+  margin-left: 85px;
 }
 
 .title {
@@ -89,10 +100,10 @@
   font-size: 20px;
 }
 
-.cultureeeng {
+.cultureeng {
   font-size: 10px;
   color: gray;
-  margin-top: 12px;
+  margin-top: 10px;
   font-weight: lighter;
 }
 
@@ -117,6 +128,8 @@
 .bottom {
   display: flex;
   flex-direction: row;
+  margin-top: 60px;
+  justify-content: center;
 }
 
 .rightbottom {
@@ -124,7 +137,11 @@
 }
 
 .mainimg {
-  display: flex;
   object-fit: cover;
-  background-size: cover;
+  width: 100%;
+  overflow: hidden;
+}
+
+.all {
+  justify-content: center;
 }
