--- a/everytime/css/login.css
+++ b/everytime/css/login.css
@@ -11,27 +11,19 @@ img {
   margin-bottom: 30px;
 }
 
-input[type="text"],
-input[type="password"],
-button {
+.idBox {
   width: 400px;
   height: 35px;
   border: 0;
   border-radius: 10px;
   outline: none;
-  margin: 3px;
-  padding-left: 10px;
+  margin-bottom: 10px;
 }
 
 input[type="text"],
 input[type="password"] {
   background-color: #f0f0f0;
   text-align: left;
-}
-
-button {
-  background-color: #bd4936;
-  color: white;
 }
 
 a {
