--- a/everytime/css/style.css
+++ b/everytime/css/style.css
@@ -104,10 +104,18 @@ nav .icon {
   background: #fff;
 }
 
-#container .wrap {
+
+#container > div {
   display: flex;
-  justify-content: space-between;
+  flex-direction: row;
+  justify-content: center;
 }
+
+#container .wrap {
+  position: relative;
+  margin: 0 auto 25px auto;
+}
+
 
 #container .title,
 .new, .bubblespost, .text,
@@ -128,12 +136,7 @@ nav .icon {
   width: 24px;
   height: 24px;
   margin-left: 5px;
-}
-
-#container .item {
-  display: block;
-  padding: 12px;
-}
+} 
 
 .bubblespost {
   display: flex; 
@@ -235,4 +238,62 @@ nav .icon {
 
 .small {
   margin-left: 10px;
+}
+
+/*container*/
+#container {
+  background: #fff;
+}
+
+#container .title,
+.new,
+.subtitle {
+  border: 1px solid #e3e3e3;
+  width: 900px;
+  margin-top: 10px;
+  padding-left: 1%;
+}
+
+.text {
+  border: 1px solid #e3e3e3;
+  width: 900px;
+  margin-top: 10px;
+}
+
+.content {
+  padding-left: 1%;
+}
+
+#container .name {
+  margin-left: 10px;
+  color: #056ab5;
+}
+.new {
+  background: #f4f4f4;
+  color: darkgray;
+}
+
+.board {
+  background: #f9f9f9;
+  border: 1px solid #e3e3e3;
+  width: 350px;
+  margin-top: 10px;
+}
+
+.article {
+  padding-left: 2%;
+}
+
+.post2 {
+  font-weight: bold;
+}
+
+#container hr {
+  clear: both;
+  width: 100%;
+  border: 1px solid #e3e3e3;
+}
+
+#container > div > aside {
+  margin-left: 10%;
 }
