--- a/everytime/css/style.css
+++ b/everytime/css/style.css
@@ -47,7 +47,6 @@
   height: 35px;
   border: 2px solid lightgray;
   float: left;
-  margin-left: 200px;
   margin-top: 30px;
 
   font-weight: bold;
@@ -60,36 +59,30 @@
   height: 100px;
   border: 2px solid lightgray;
   float: left;
-  margin-left: 200px;
 }
 
-.queshoticon {
+.question {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
 }
 
 .newwrite {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   background-color: rgb(242, 239, 239);
   width: 600px;
   height: 30px;
   border: 2px solid lightgray;
   float: left;
-  margin-left: 200px;
   margin-top: 10px;
 
   font-weight: lighter;
+
+  justify-content: space-between;
 }
 
 .leftmenu {
   display: flex;
-  flex-direction: column;
-}
-
-.penicon {
-  display: flex;
-  justify-content: right;
   flex-direction: column;
 }
 
@@ -98,7 +91,7 @@
   height: 70px;
   border: 2px solid lightgray;
   float: left;
-  margin-left: 200px;
+  justify-content: space-between;
 }
 
 .sorry {
@@ -113,7 +106,7 @@
 .likelionds {
   display: flex;
   justify-content: right;
-  margin-left: 380px;
+  margin-top: 5px;
 }
 
 .rightmenu {
@@ -159,6 +152,7 @@
 .rightmenuall {
   display: flex;
   flex-direction: column;
+  justify-content: center;
 }
 
 .right22 {
@@ -168,14 +162,20 @@
   margin-left: 100px;
 }
 
-.inbox {
+.hot {
   display: flex;
-  flex-direction: column-reverse;
-  margin-left: 30px;
-  margin-bottom: 100px;
+  flex-direction: row;
 }
 
 .allandright {
   display: flex;
   flex-direction: row;
+  justify-content: center;
+}
+
+.writing_box {
+  margin: 3px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
 }
