--- a/ds_library/css/style.css
+++ b/ds_library/css/style.css
@@ -1,3 +1,7 @@
+body {
+  font-family: "Malgun Gothic", "맑은 고딕", sans-serif;
+}
+
 /*header*/
 div.header {
   display: flex;
@@ -10,24 +14,164 @@ div.header {
   font-size: 17px;
 }
 
+div.ham_btn {
+  display: none;
+}
+
 /*section1*/
+
+div.searchbar {
+  width: 100%;
+  height: 30vw;
+}
+
 img.search {
   width: 100%;
-  height: 450px;
+  height: 100%;
   object-fit: cover;
 }
 
-img.searchbarimg {
+div.search_img {
+  display: flex;
   position: absolute;
-  top: 210px;
-  left: 650px;
+  width: 100%;
+  top: 20%;
+}
+
+img.searchbarimg {
+  display: flex;
+  padding-left: 35vw;
   width: 450px;
   height: 75px;
 }
 
+@media all and (min-width: 1024px) {
+  /*header*/
+  div.header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 20px;
+    padding-left: 60px;
+    padding-right: 60px;
+    font-weight: bold;
+    font-size: 17px;
+  }
+
+  div.ham_btn {
+    display: none;
+  }
+
+  div.search_img {
+    display: flex;
+    position: absolute;
+    width: 100%;
+    top: 20%;
+  }
+
+  img.searchbarimg {
+    display: flex;
+    padding-top: 8vw;
+    padding-left: 35vw;
+    width: 450px;
+    height: 75px;
+  }
+
+  img.banner {
+    width: 600px;
+    margin-left: 10vw;
+    padding-top: 1vw;
+  }
+
+  div.notice {
+    float: left;
+    padding-top: 5vw;
+    padding-left: 10vw;
+  }
+}
+
+/* 작은 크기 */
+@media all and (max-width: 768px) {
+  /*header*/
+  div.header > span {
+    display: none;
+  }
+
+  div.header {
+    padding-left: 3vw;
+    padding-right: 0;
+  }
+
+  img.logo {
+    height: 8vw;
+  }
+
+  div.ham_btn {
+    display: flex;
+    float: right;
+    margin-right: 3vw;
+  }
+
+  img.ham_btn_ds {
+    display: flex;
+    width: 6vw;
+    height: 6vw;
+    margin-bottom: 1vw;
+  }
+
+  img.ham_btn_tm {
+    display: flex;
+    margin-right: 3vw;
+    margin-top: 0.5vw;
+    width: 5vw;
+    height: 5vw;
+  }
+
+  div.search_img {
+    display: flex;
+    position: absolute;
+    width: 100%;
+    top: 15%;
+  }
+
+  img.searchbarimg {
+    display: flex;
+    padding-left: 10vw;
+    width: 450px;
+    height: 75px;
+  }
+
+  div.menu_three {
+    display: none;
+  }
+
+  div.menu_five {
+    display: none;
+  }
+
+  div.section {
+    flex-wrap: wrap;
+  }
+
+  div.section > div {
+    margin-right: 5vw;
+  }
+
+  div.notice_img {
+    padding: 0;
+    margin: 0;
+    flex-wrap: wrap-reverse;
+  }
+
+  .banner {
+    margin-left: 0;
+    width: 5vw;
+  }
+}
+
 /*section2*/
 div.section {
-  background-color: rgb(208, 186, 196);
+  background-color: rgb(241, 238, 233);
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -38,14 +182,13 @@ div.section {
 }
 
 /*section3_공지사항*/
-div.noticeandimg {
+div.notice_img {
   display: flex;
 }
 
 div.notice {
-  float: left;
-  margin-left: 200px;
-  padding-top: 50px;
+  float: center;
+  margin-left: 2.5vw;
 }
 
 span.noticetext {
@@ -96,8 +239,8 @@ div.line {
 }
 
 /*section3_이미지*/
-img.banner {
-  width: 600px;
-  padding-left: 150px;
-  padding-top: 50px;
+
+.banner {
+  margin: 5vw;
+  width: 90%;
 }
