--- a/ds_library/css/library.css
+++ b/ds_library/css/library.css
@@ -1,3 +1,89 @@
+@media all and (max-width: 1102px) {
+  header .top_bar ul {
+    padding-left: 495px;
+  }
+  header .main_bar img {
+    width: 14em;
+  }
+}
+
+@media all and (min-width: 992px) {
+  nav .high_hidden {
+    display: none;
+  }
+}
+
+@media all and (max-width: 992px) {
+  header .top_bar {
+    display: none;
+  }
+  header .main_bar {
+    display: flex;
+    justify-content: space-between;
+    height: 79px;
+  }
+  header .main_bar img {
+    width: 14em;
+  }
+  nav .high {
+    display: none;
+  }
+  nav .high_hidden img {
+    width: 1.5em;
+    padding-right: 10px;
+  }
+  section .center_bar {
+    padding: 40px 0px 40px 0px;
+  }
+  section .center_bar ul {
+    flex-wrap: wrap;
+  }
+  section .center_bar li {
+    flex-direction: row;
+  }
+  section .center_bar img {
+    padding: 0px 10px 0px 30px;
+  }
+}
+
+@media all and (max-width: 776px) {
+  #L3 {
+    display: none;
+  }
+  #L5 {
+    display: none;
+  }
+  section .list {
+    display: none;
+  }
+}
+
+@media all and (max-width: 570px) {
+  header .main_bar img {
+    width: 10em;
+    padding-left: 10px;
+  }
+  nav .high_hidden img {
+    width: 1.5em;
+    padding-right: 10px;
+  }
+  section .serch img {
+    width: 100%;
+  }
+  section .center_bar {
+    height: 100%;
+  }
+  section .center_bar li {
+    align-items: center;
+    flex-direction: column;
+    padding-bottom: 30px;
+  }
+  section .center_bar img {
+    margin: 0px 30px 0px 30px;
+    padding: 5px;
+  }
+}
+
 @font-face {
   font-family: NG;
   src: url(font/NanumGothicBold.woff);
@@ -25,14 +111,21 @@ section {
   display: flex;
   flex-direction: row;
   justify-content: flex-end;
-  width: 1200px;
   height: 43px;
   border-bottom: 1px solid #dcdcdc;
   font-size: 12px;
   margin: 0 auto;
 }
 
-.top_bar > div {
+.top_bar ul {
+  display: flex;
+  flex-direction: row;
+  list-style-type: none;
+  margin: 0 auto;
+  padding-left: 600px;
+}
+
+.top_bar li {
   display: flex;
   align-items: center;
   border-right: 1px solid #dcdcdc;
@@ -75,13 +168,16 @@ section {
   color: #333333;
 }
 
+.main_bar img {
+  width: 20em;
+}
+
 .high {
   display: flex;
   flex-direction: row;
   align-items: center;
   justify-content: center;
   list-style-type: none;
-  margin-left: 40px;
 }
 
 .high li {
@@ -95,16 +191,32 @@ nav li:hover {
   color: #94294a;
 }
 
+.high_hidden {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  list-style-type: none;
+  margin: 0;
+}
+
+.high_hidden img {
+  width: 10 em;
+}
+
 .serch {
-  width: 1690.67px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   height: 275px;
+  background-image: url(/ds_library/img/main-img3.jpg);
+  background-size: cover;
+  background-position: center bottom;
 }
 
 .serch img {
-  width: 1690.67px;
-  height: 275px;
-  object-fit: cover;
-  object-position: center bottom;
+  margin: 0 auto;
+  width: 100%;
 }
 
 .center_bar {
@@ -122,6 +234,7 @@ nav li:hover {
 .center_bar img {
   width: 75px;
   margin-bottom: 15px;
+  padding: 0px 30px 0px 30px;
 }
 
 .center_bar ul {
@@ -138,7 +251,6 @@ nav li:hover {
   flex-direction: column;
   align-items: center;
   list-style-type: none;
-  padding: 0px 30px 0px 30px;
 }
 
 .center_bar li:hover {
@@ -155,27 +267,32 @@ nav li:hover {
 .list {
   display: flex;
   flex-direction: column;
-  width: 570px;
+  max-width: 570px;
+  width: 100%;
   height: 430px;
-  margin-right: 30px;
-  margin-top: 10px;
+  padding: 0px 10px 0px 10px;
 }
 
 .title {
   display: flex;
-  flex-direction: row;
+  justify-content: space-between;
   align-items: center;
   height: 50px;
   letter-spacing: -1px;
 }
 
-.title > div {
+.title_text {
+  display: flex;
+  flex-direction: row;
+  font-size: 26px;
+  font-weight: bold;
+}
+
+.title_text > div {
   display: flex;
   flex-direction: row;
   align-items: flex-end;
-  font-size: 26px;
   padding-right: 45px;
-  font-weight: bold;
 }
 
 #pink {
@@ -195,10 +312,6 @@ nav li:hover {
   font-size: 13px;
   letter-spacing: 1px;
   color: #999999;
-}
-
-.title img {
-  margin-left: 160px;
 }
 
 .text ul {
@@ -230,5 +343,6 @@ nav li:hover {
 }
 
 .banner img {
-  width: 570px;
+  width: 100%;
+  height: 430px;
 }
