--- a/everytime/CSS/style.css
+++ b/everytime/CSS/style.css
@@ -93,19 +93,19 @@ a:visited {
   height: 230px;
   background-color: #f2f2f2;
   margin-top: 80px;
-  position: relative;
-  right: 8px;
   display: flex;
   border: 1px solid #d6d6d6;
+  justify-content: center;
+  overflow-x: scroll;
 }
 
 .messageboard div {
   margin: 10px 5px;
   display: flex;
+  justify-content: center;
 }
 
 .messageboard div:first-child {
-  margin-left: 150px;
   border-left: 1px solid #d6d6d6;
 }
 
@@ -113,16 +113,13 @@ a:visited {
   border-right: 1px solid #d6d6d6;
 }
 
-.messageboard div ul {
-  position: relative;
-  right: 13px;
-  bottom: 5px;
-}
-
 .messageboard div ul li {
   font-size: 13px;
   list-style: none;
   margin-bottom: 7px;
+  display: inline-block;
+  width: 150px;
+  margin: 1px;
 }
 
 .messageboard div ul li a:hover {
@@ -140,8 +137,12 @@ a:visited {
 
 /*  */
 
-#name {
+.main_post {
   width: 780px;
+}
+
+#name {
+  width: 100%;
   border: 1px solid #d6d6d6;
   margin-top: 8px;
 }
@@ -158,7 +159,7 @@ a:visited {
   flex-direction: column;
   border: 1px solid #d6d6d6;
   margin-top: 8px;
-  width: 780px;
+  width: 100%;
 }
 
 #recommendation div {
@@ -205,7 +206,7 @@ a:visited {
 
 .new {
   border: 2px solid #d0cfcf;
-  width: 780px;
+  width: 100%;
   height: 50px;
   background-color: #f5f5f5;
   margin-top: 8px;
@@ -218,23 +219,20 @@ a:visited {
   color: #8f8f8f;
   background-color: #f5f5f5;
   align-items: center;
+  justify-content: space-between;
 }
 
 .new a p {
   margin-top: 15px;
 }
 
-.new a img {
-  margin-left: 590px;
-}
-
 .post {
-  width: 780px;
+  width: 100%;
   margin-top: 8px;
 }
 
 .post_content {
-  width: 780px;
+  width: 100%;
   height: 90px;
   border-top: 1px solid #d0cfcf;
   border-left: 1px solid #d0cfcf;
@@ -271,6 +269,7 @@ a:visited {
   display: flex;
   align-items: center;
   margin-top: 8px;
+  justify-content: space-between;
 }
 
 .search {
@@ -294,7 +293,6 @@ a:visited {
 }
 
 .next a {
-  margin-left: 417px;
   color: red;
   border-radius: 2px;
   padding: 7px 6px;
@@ -302,6 +300,7 @@ a:visited {
   background-color: #ffffff;
   font-size: 15px;
   font-weight: bold;
+  margin-right: 8px;
 }
 
 .side {
@@ -394,9 +393,8 @@ a.more_content {
 
 .main_content {
   display: flex;
-  position: relative;
-  left: 150px;
-  top: 17px;
+  width: 100vw;
+  justify-content: center;
 }
 
 .side {
@@ -412,11 +410,22 @@ a.more_content {
 }
 
 /*하단 바*/
+.footer {
+  width: 100vw;
+  display: flex;
+  justify-content: center;
+}
+
 .website_detail ul {
   display: flex;
   list-style: none;
   margin-top: 60px;
-  margin-left: 400px;
+  justify-content: center;
+  padding: 0;
+}
+
+.website_detail ul li:first-child {
+  margin: 0;
 }
 
 .website_detail ul li a {
@@ -431,9 +440,48 @@ a.more_content {
 .notify {
   font-size: 12px;
   color: #c4c4c4;
-  margin-left: 600px;
+  text-align: center;
 }
 
 .review {
   padding-bottom: 10px;
+}
+
+@media all and (max-width: 640px) {
+  #topmenu,
+  #name,
+  .side {
+    display: none;
+  }
+
+  .mobile_header {
+    width: 101vw;
+    display: flex;
+    align-items: center;
+    height: 50px;
+    border-bottom: 2px solid #d6d6d6;
+    position: fixed;
+    left: 0;
+    top: 0;
+    background-color: #ffffff;
+    font-size: 16px;
+  }
+
+  .mobile_header a {
+    display: flex;
+    align-items: center;
+    margin-left: 5px;
+  }
+
+  .mobile_header a:first-child {
+    margin-left: 10px;
+  }
+
+  .main_post {
+    width: 100vw;
+  }
+
+  .website_detail ul {
+    flex-wrap: wrap;
+  }
 }
