--- a/everytime/css/post.css
+++ b/everytime/css/post.css
@@ -43,7 +43,7 @@ img {
 }
 
 .post1_img2 {
-  background-color: #bd4936;
+  background-color: #f91f15;
   text-align: center;
   margin-left: 1px;
 }
