--- a/everytime/css/login.css
+++ b/everytime/css/login.css
@@ -1,3 +1,7 @@
+* {
+  box-sizing: border-box;
+}
+
 .login {
   display: flex;
   flex-direction: column;
@@ -24,6 +28,14 @@ input[type="text"],
 input[type="password"] {
   background-color: #f0f0f0;
   text-align: left;
+  padding-left: 15px;
+}
+
+input[type="submit"] {
+  background-color: #f91f15;
+  color: white;
+  font-weight: bold;
+  font-size: 15px;
 }
 
 a {
