--- a/ds_library/css/style.css
+++ b/ds_library/css/style.css
@@ -13,9 +13,10 @@ li {
 }
 
 nav .menu {
-  width: 1180px;
-  height: 80px;
-  margin: auto;
+  width: 100%;
+  max-width: 1200px;
+  padding: 20px 0 0;
+  margin: 0 auto;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -24,10 +25,26 @@ nav .menu {
   color: #333;
 }
 
+/*메뉴바 글씨 사라지게*/
+@media (max-width: 992px) {
+  nav .menu > li {
+    display: none;
+  }
+}
+
+@media all and (max-width:990px){
+  .hidden1 {
+    background: url(../img/tm-all.png) center no-repeat
+  }
+  .hidden2 {
+    background: url(../img/ds-btn-my.jpg) center no-repeat
+  }
+}
+
 #search {
   display: flex;
   height: 275px;
-  width: auto;
+  width: 100%;
   background-image: url(../img/main-img3.jpg);
   background-size: cover;
   background-position: bottom;
@@ -36,29 +53,102 @@ nav .menu {
     align-items: center;
 }
 
-#menu-icons .ds-background {
-  width: auto;
-  height: 190px;
-  background-color: #f4f3f0;
-  border-bottom: 1px solid #ddd;
+.ds-quick,.ds-quick-wrap {
+  width: 100%;
+  box-sizing: border-box
 }
 
-#menu-icons .ds-quick {
-  width: 1180px;
-  height: 190px;
-  margin: auto;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
+.ds-quick-wrap {
+  background: #f4f3f0;
+  border-bottom: 1px solid #dfdedd
 }
 
-#menu-icons .menu-click {
+.ds-quick {
+  display: table;
+  height: 150px;
+  max-width: 1200px;
+  padding: 40px 0;
+  margin: 0 auto
+}
+
+.ds-quick li {
+  display: inline-block;
+  justify-content: center;
+  text-align: center;
+  width: 12.5%
+}
+
+.ds-quick li span {
+  display: block;
+  text-align: center;
+  font-size: .9em;
+  font-weight: 600;
+}
+
+@media screen and (max-width:992px) {
+  .ds-quick li {
+    width: 25%;
+  }
+
+
+  .ds-quick li span {
+    display: inline-block;
+    padding-top: 30px;
+    margin-left: 10px;
+    vertical-align: top
+  }
+
+}
+
+
+@media screen and (max-width: 768px) {
+  .ds-mobile-am>li {
+      width:50%;
+      height: auto
+  }
+}
+
+@media screen and (min-width: 320px) and (max-width:570px) {
+  .ds-quick li {
+      width:33.3333%;
+      padding-bottom: 30px;
+      vertical-align: top
+  }
+
+  .ds-quick li a {
+      display: block;
+      width: 76px;
+      margin: 0 auto
+  }
+
+  .ds-quick li span {
+      display: block;
+      padding-top: 0;
+      margin-left: 10px;
+      vertical-align: top
+  }
+
+  .menu-click7, .menu-click8 {
+    display: none;
+  }
+
+  .ikc-search-wrap .ikc-search .ikc-btn-search {
+      background-size: 100%
+  }
+
+  .ikc-search-wrap .ikc-search .ikc-search-keyword {
+      font-size: .9em
+  }
+}
+
+
+#menu-icons > ul > li {
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 
-#menu-icons .menu-click > span {
+#menu-icons > ul > li > span {
   margin-top: 10px;
   font-size: 14px;
   font-weight: bolder;
@@ -75,12 +165,20 @@ nav .menu {
 
 #notices .left {
   height: 430px;
-  width: 600px;
+  width: 35%;
   margin-left: 30px;
   display: flex;
   flex-direction: column;
   padding: 1%;
+  flex-wrap: nowrap;
 }
+
+@media screen and (max-width: 768px) {
+  #notices .left {
+      display: none;
+  }
+}
+
 
 #notices .left .notice-title {
   height: 50px;
@@ -147,7 +245,7 @@ nav .menu {
 
 #notices .right > img {
   height: 430px;
-  width: 570px;
+  width: 100%;
 }
 
 .hr-bold {
@@ -189,3 +287,4 @@ footer > p{
   background: url(../img/ds-static-top.png) no-repeat;
   font-size: 0;
 }
+
